# embedded.templates

./: LICENSE  README.md
arm/c/: data_init.c
arm/cpp/: Makefile  \  firmware.elf  qemuboot.ld
arm/cpp/hello_world/: a-main.s
arm/stm32f4discovery/baremetal/c/: firmware.elf  startup.s
arm/stm32f4discovery/baremetal/cpp/: Makefile  d.sh  firmware.elf  firmware_semih.elf  flash.via.telnet.semih.sh  flash.via.telnet.sh  init.cpp  init_c.c  main.cpp  map.txt  qemuboot.ld  qemuboot.memory  sh.sh  stm32f1xx_isr.c  stm32f4xx_isr.c
arm/stm32f4discovery/qemu/c/: Makefile
arm/stm32f4discovery/qemu/cpp/: main.cpp  startup.s
arm/stm32f4discovery/qemu/cpp/firmware/: firmware.cpp  firmware.s
arm/stm32f4discovery/qemu/cpp/hello_world/: a-hello_world.s  hello_world.ii
arm/stm32f4discovery/qemu/cpp/polymorphism/: polymorphism.cpp
arm/stm32vldiscovery/baremetal/c/: data_init.h  qemuboot.ld
arm/stm32vldiscovery/baremetal/cpp/: Makefile  d.sh  firmware.elf  init.c  init.cpp  init_c.c  init_cpp.cpp  isr_vector.c  main.cpp  map.txt  qemuboot.ld  qemuboot.memory  startup.s
arm/stm32vldiscovery/qemu/c/: main.c
arm/stm32vldiscovery/qemu/cpp/: Makefile  firmware.elf  init.cpp  qemuboot.memory
arm/stm32vldiscovery/qemu/cpp/firmware/: firmware
arm/stm32vldiscovery/qemu/cpp/hello_world/: a-hello_world.ii  a-main.i  hello_world.s
arm/stm32vldiscovery/qemu/cpp/polymorphism/: polymorphism
arm/versatilepb/baremetal/c/: qemuboot.memory
arm/versatilepb/baremetal/cpp/: firmware.elf
arm/versatilepb/baremetal/cpp/firmware/: firmware.ii
arm/versatilepb/baremetal/cpp/hello_world/: hello_world.cpp  main.c
c/: main.c  stm32g0_startup.c  stm32g0b1_ls.ld  syscalls.c.old
cpp/: CMakeLists.txt  Makefile  build.sh  burn_libc_nano.sh  stm32g0b1_ls.ld  syscalls_pure.c  toolchain_arm-none-eabi.cmake
doc/: app_structure.txt  isr.txt
src/: CMakeLists.txt  build.sh  burn.sh  burn_libc_nano.sh  burn_libc_nano_sh.sh  create_links.sh  debug_client.sh  debug_server.sh  globals.cpp  mcu-toolchain.cmake  mcu.memory  mcu_isr_vector.c  mcu_ls.ld  mcu_startup.cpp  startup.cpp  startup.hpp  syscalls.c  syscalls_pure.c
src/c/: Makefile
src/cpp/: Makefile  debug_server.sh  main.cpp  stm32g0_isr_vector.c  stm32g0_startup.cpp
src/include/: app.hpp  app_builder.hpp
src/nucleo-g0b1re/: burn.sh  debug_client.sh  stm32g0_startup.cpp
src/src/: app.cpp  app_builder.cpp
